# pinterest-crawler

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
docs/: mvp-tech-stack-playwright.md  pinterest-board-crawl-plan.md  pinterest-created-crawl-plan.md
pinterest_crawler/: __init__.py  board_feed.py  cli.py  config.py  created_downloader.py  created_feed.py  created_scanner.py  downloader.py  http_client.py  images.py  manifest.py  models.py  pin_detail.py  playwright_bootstrap.py  scanner.py  ssr.py  user_boards.py  user_downloader.py
tests/: test_board_feed.py  test_cli.py  test_config.py  test_created_feed.py  test_created_scanner.py  test_downloader.py  test_http_client.py  test_images.py  test_manifest.py  test_pin_detail.py  test_scanner.py  test_ssr.py  test_user_boards.py  test_user_downloader.py
