[project]
name = "pinterest-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "playwright>=1.44",
    "PyYAML>=6.0",
]

[project.scripts]
pinterest-crawler = "pinterest_crawler.cli:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["pinterest_crawler*"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
]

[tool.ruff]
line-length = 100
exclude = [
    ".tmp",
    ".venv",
    "reference_project",
]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = [
    "^reference_project/",
    "^\\.tmp/",
    "^\\.venv/",
]

[tool.pytest.ini_options]
pythonpath = ["."]
